[gd_scene load_steps=15 format=3 uid="uid://jkmarcqkaunt"]

[ext_resource type="Script" path="res://Interactable/Dungen/scripts/locked_door.gd" id="1_3m828"]
[ext_resource type="Texture2D" uid="uid://uxmqr3oxyi86" path="res://Interactable/Dungen/dungeon_props.png" id="1_f7emg"]
[ext_resource type="Resource" uid="uid://dnv8eplgyxfnj" path="res://Items/key_dungen.tres" id="2_y2w34"]
[ext_resource type="AudioStream" uid="uid://dhdtpolnkfli5" path="res://Interactable/Dungen/locked_door.wav" id="3_6rh5m"]
[ext_resource type="AudioStream" uid="uid://dj164issf15dq" path="res://Interactable/Dungen/unlock_door.wav" id="4_nwxt8"]
[ext_resource type="PackedScene" uid="uid://d36fvy78r35sf" path="res://GeneralNodes/PersistentDataHandler/persistent-data-handler.tscn" id="6_chxg5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7nkr"]
size = Vector2(64, 66)

[sub_resource type="Animation" id="Animation_iiwul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uoysk"]
resource_name = "close_door"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_8dqft"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i1fbi"]
resource_name = "open_door"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_58m6t"]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6gro"]
_data = {
"RESET": SubResource("Animation_iiwul"),
"close_door": SubResource("Animation_uoysk"),
"closed": SubResource("Animation_8dqft"),
"open_door": SubResource("Animation_i1fbi"),
"opened": SubResource("Animation_58m6t")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgxd6"]
size = Vector2(32, 24)

[node name="LockedDoor" type="Node2D"]
process_mode = 3
script = ExtResource("1_3m828")
key_item = ExtResource("2_y2w34")
locked_audio = ExtResource("3_6rh5m")
open_audio = ExtResource("4_nwxt8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(32, -38)
texture = ExtResource("1_f7emg")
hframes = 7
region_rect = Rect2(0, 0, 65, 96)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(32, -28)
shape = SubResource("RectangleShape2D_u7nkr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t6gro")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="PersistentData_IsOpen" parent="." instance=ExtResource("6_chxg5")]

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
position = Vector2(32, -7)
shape = SubResource("RectangleShape2D_qgxd6")
debug_color = Color(0.839216, 0.8, 0.215686, 0.419608)
